feat(backend): SPRINT-069 implemented